Enable GPU process to emit ETW events

The feature flag/commandline switch that controls whether a process
emits ETW events is not propagated the GPU process, so it never
records ETW events. This change propagates the flag via the
gpu-preferences commandline value, similar to other options passed
to the GPU process.

R=brucedawson@chromium.org

Bug: 918743
Change-Id: I130331965f9c7b8a0864302238f91fc0bcab8fc7
Reviewed-on: https://chromium-review.googlesource.com/c/1398503
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Commit-Queue: Bruce Dawson <brucedawson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620911}
Former-commit-id: 8f7e6263051e19089411236c86c4ef7507a49b64