content/gpu/gpu_main.cc
@@ -64,6 +64,7 @@
 #endif
 
 #if defined(OS_WIN)
+#include "base/trace_event/trace_event_etw_export_win.h"
 #include "base/win/scoped_com_initializer.h"
 #include "base/win/windows_version.h"
 #include "media/gpu/windows/dxva_video_decode_accelerator_win.h"
@@ -210,6 +211,11 @@ int GpuMain(const MainFunctionParams& parameters) {
 
   if (gpu_preferences.gpu_startup_dialog)
     WaitForDebugger("Gpu");
+
+#if defined(OS_WIN)
+  if (gpu_preferences.enable_trace_export_events_to_etw)
+    base::trace_event::TraceEventETWExport::EnableETWExport();
+#endif
 
   base::Time start_time = base::Time::Now();
 
